[package]
name = "beetle-nonzero"
version = "0.3.8"
edition = "2021"
authors = ["beetle"]
description = "Combines the std `NonZero` structs into one struct"
license = "MIT"
repository = "https://github.com/Mearkatz/beetle-nonzero"

[lints.rust]
missing_docs = "deny"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
expect_used = "deny"


[dependencies]
default-impl = "0.1.0"
num = "0.4.0"
